--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,14 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "h0gar/xpath": "0.*"
+        "h0gar/xpath": "~0.1.0"
     },
     "autoload": {
         "psr-4": {"Asgard\\Tester\\": "."}
     },
-    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.2-dev"
+            "dev-master": "0.3-dev"
         }
     }
 }
